--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Robert Hermann",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
 }
